[tool.poetry]
name = "adorn"
version = "0.0.14"
description = "Adorn"
authors = ["Jacob Baumbach <jacob.baumbach@hey.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/pyadorn/adorn"
repository = "https://github.com/pyadorn/adorn"
documentation = "https://pyadorn.github.io/adorn/"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/pyadorn/adorn/releases"

[tool.poetry.dependencies]
python = "^3.9.0"
typing-extensions = "^4.0.1"
tomli = "^2.0.1"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.3.5"
mypy = "^0.971"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = "^22.3"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^3.1.0"
pre-commit-hooks = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
Pygments = "^2.13.0"
sphinxcontrib-apidoc = "^0.3.0"
ipython = "^8.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["adorn"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
