[tool.poetry]
name = "adorn"
version = "0.1.2"
description = "Adorn"
authors = ["Jacob Baumbach <jacob.baumbach@hey.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/pyadorn/adorn"
repository = "https://github.com/pyadorn/adorn"
documentation = "https://pyadorn.github.io/adorn/"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/pyadorn/adorn/releases"

[tool.poetry.dependencies]
python = "^3.9.0"
tomli = "^2.0.1"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = ">=6.4,<8.0"}
safety = "^2.3.5"
mypy = "^1.4"
typeguard = "^4.0.0"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = ">=4.3.2,<8.0.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = ">=2.19,<4.0"
black = ">=23.7,<24.0"
flake8 = ">=6.1.0,<7.0.0"
flake8-rst-docstrings = "^0.3.0"
pre-commit-hooks = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
Pygments = "^2.13.0"
sphinxcontrib-apidoc = "^0.3.0"
ipython = "^8.1.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
ruff = "^0.0.287"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["adorn"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88  # black
show-fixes = true
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle - error
    "W",  # pycodestyle - warning
    "F",  # pyflakes
    "N",  # pep8-naming
    "D",  # pydocstyle
    "S",  # flake8-bandit
    "I",  # isort - python imports
]
ignore = [
    "E203",  # Whitespace before '{symbol}'
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D415",  # First line should end with a period, question mark, or exclamation point
    "E501",  # Line too long ({width} > {limit} characters)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D100", "D103"]
"__init__.py" = ["D104", "F401"]

[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
